Update translation handling. Transition between translated routes still needs work.

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -1,4 +1,7 @@
 {
-    "home.title": "Inicio",
-    "home.heading": "¡Hola!"
+  "home.title": "Inicio",
+  "home.heading1": "¡Hola! Soy Giu Magnani.",
+  "home.heading2": "I’m a Front-End Developer and UI/UX Designer from Chile working and living in Milan, Italy.",
+  "home.summary": "I'm a creative and passionate professional who loves Web as much as Design. I started working with small business and participating in design contests to build a strong portfolio and references. With perseverance and hard work, in 2012 I was contacted to work remotely with a company in USA which produces logo and print design services. In 2013, I went to London, UK.",
+  "home.socialIntro": "Mira lo que estoy compartiendo en Redes Sociales"
 }
