--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,4 +1,7 @@
 {
   "home.title": "Home",
-  "home.heading": "Hello!"
+  "home.heading1": "Hi! I'm Giu Magnani.",
+  "home.heading2": "I’m a Front-End Developer and UI/UX Designer from Chile working and living in Milan, Italy.",
+  "home.summary": "I'm a creative and passionate professional who loves Web as much as Design. I started working with small business and participating in design contests to build a strong portfolio and references. With perseverance and hard work, in 2012 I was contacted to work remotely with a company in USA which produces logo and print design services. In 2013, I went to London, UK.",
+  "home.socialIntro": "See what I’ve been sharing on Social Media"
 }
