--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -3,5 +3,25 @@
   "home.heading1": "Hi! I'm Giu Magnani.",
   "home.heading2": "I’m a Front-End Developer and UI/UX Designer from Chile working and living in Milan, Italy.",
   "home.summary": "I'm a creative and passionate professional who loves Web as much as Design. I started working with small business and participating in design contests to build a strong portfolio and references. With perseverance and hard work, in 2012 I was contacted to work remotely with a company in USA which produces logo and print design services. In 2013, I went to London, UK.",
-  "home.socialIntro": "See what I’ve been sharing on Social Media"
+  "home.socialIntro": "See what I’ve been sharing on Social Media",
+  "menu.about": "About",
+  "menu.work": "Work",
+  "menu.journal": "Journal",
+  "menu.shop": "Shop",
+  "menu.contact": "Contact",
+  "projects.intro": "UX/UI Design and Front-End Development Projects",
+  "projects.seeProjects": "See all my Work",
+  "projects.seeProject": "See full project",
+  "projects.latest": "Latest",
+  "projects.and": "and",
+  "projects.projects": " projects.",
+  "projects['Graphic Design']": "Graphic Design",
+  "projects['UX/UI Design']": "UX/UI Design",
+  "projects['Front-End Development']": "Front-End Development",
+  "projects['Illustration']": "Illustration",
+  "journal.seeJournal": "See my Journal",
+  "journal.heading1": "My Journal",
+  "journal.heading2": "Here I’ll post my thoughts and experiments on Art, Design and Development.",
+  "journal.intro": "Latest on my Journal",
+  "footer.copyright": "Designed & Developed by Giu Magnani 2019"
 }
