--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -3,5 +3,25 @@
   "home.heading1": "¡Hola! Soy Giu Magnani.",
   "home.heading2": "I’m a Front-End Developer and UI/UX Designer from Chile working and living in Milan, Italy.",
   "home.summary": "I'm a creative and passionate professional who loves Web as much as Design. I started working with small business and participating in design contests to build a strong portfolio and references. With perseverance and hard work, in 2012 I was contacted to work remotely with a company in USA which produces logo and print design services. In 2013, I went to London, UK.",
-  "home.socialIntro": "Mira lo que estoy compartiendo en Redes Sociales"
+  "home.socialIntro": "Mira lo que estoy compartiendo en Redes Sociales",
+  "menu.about": "Sobre Mí",
+  "menu.work": "Trabajo",
+  "menu.journal": "Bitácora",
+  "menu.shop": "Tienda",
+  "menu.contact": "Contacto",
+  "projects.intro": "Proyectos de Diseño UX/UI y Desarrollo Front-End",
+  "projects.seeProjects": "Mira todo mi Trabajo",
+  "projects.seeProject": "Ver Proyecto completo",
+  "projects.latest": "Últimos proyectos de",
+  "projects.and": "y",
+  "projects.projects": ".",
+  "projects['Graphic Design']": "Diseño Gráfico",
+  "projects['UX/UI Design']": "Diseño UX/UI",
+  "projects['Front-End Development']": "Desarrollo Front-End",
+  "projects['Illustration']": "Ilustración",
+  "journal.seeJournal": "Mira mi Bitácora",
+  "journal.heading1": "Mi Bitácora",
+  "journal.heading2": "Aquí subiré mis ideas y experimentos sobre Arte, Diseño y Desarrollo.",
+  "journal.intro": "Lo más reciente en mi Bitácora",
+  "footer.copyright": "Diseñado y Desarrollado por Giu Magnani 2019"
 }
