--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -25,6 +25,13 @@
   "journal.intro": "Latest on my Journal",
   "footer.copyright": "Designed & Developed by Giu Magnani 2019",
   "contact.contactMe": "Contact me!",
+  "contact.heading2": "Do you need a Design or Development of an App or a Website?",
+  "contact.heading3": "Send me a message through this form and I'll get back to you as soon as I can.",
+  "contact.reasonWork": "I'd like to work with you",
+  "contact.reasonHi": "Just to say hi!",
+  "contact.website": "Website",
+  "contact.app": "App",
+  "contact.other": "Other",
   "contact.name": "Name",
   "contact.email": "Email",
   "contact.message": "Message",
