--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -26,6 +26,13 @@
   "footer.copyright": "Diseñado y Desarrollado por Giu Magnani 2019",
   "contact.contactMe": "¡Contáctame!",
   "contact.name": "Nombre",
+  "contact.heading2": "¿Necesitas el diseño o desarrollo de una App o Sitio Web?",
+  "contact.heading3": "Envíame un mensaje a través del formulario y me pondré en contacto contigo lo antes que pueda.",
+  "contact.reasonWork": "Me gustaría trabajar contigo",
+  "contact.reasonHi": "¡Solo para saludar!",
+  "contact.website": "Sitio Web",
+  "contact.app": "App",
+  "contact.other": "Otra",
   "contact.email": "Email",
   "contact.message": "Mensaje",
   "contact.projectDetails": "Detalles del Proyecto",
