Add tools icons

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -2,8 +2,18 @@
   "home.title": "Home",
   "home.heading1": "Hi! I'm Giu Magnani.",
   "home.heading2": "I’m a Front-End Developer and UI/UX Designer from Chile working and living in Milan, Italy.",
-  "home.summary": "I'm a creative and passionate professional who loves Web as much as Design. I started working with small business and participating in design contests to build a strong portfolio and references. With perseverance and hard work, in 2012 I was contacted to work remotely with a company in USA which produces logo and print design services. In 2013, I went to London, UK.",
+  "home.summary": "I'm a creative and passionate professional who loves Web as much as Design.",
   "home.socialIntro": "See what I’ve been sharing on Social Media",
+  "about.heading1": "I'm Giu Magnani",
+  "about.heading2": "Front-End Developer and UI/UX Designer based in Milan, Italy. I'm a creative and passionate professional who loves Web as much as Design.",
+  "about.bio1": "I started working with small business and participating in design contests to build a strong portfolio and references. With perseverance and hard work, in 2012 I was contacted to work remotely with a company in USA which produces logo and print design services.",
+  "about.quote1": "Santiago, Chile",
+  "about.bio2": "In 2013, I went to London, UK to find new perspectives and inspiration, where I had the pleasure to work with a vintage lighting signs company and a Swedish design studio.",
+  "about.quote2": "London, UK",
+  "about.bio3": "In January 2014, with more than 3 years of experience, I launched my new design brand, to fully pursue what I love, Web Development, Design and Illustration.",
+  "about.quote3": "Milan, Italy",
+  "about.bio4": "Right now I'm living in Milano, Italy working as a Front-End Developer, I keep learning and facing new challenges to improve every day more and more.",
+  "about.quote4": "La",
   "menu.about": "About",
   "menu.work": "Work",
   "menu.journal": "Journal",
