--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -1,9 +1,10 @@
 {
   "home.title": "Inicio",
   "home.heading1": "¡Hola! Soy Giu Magnani.",
-  "home.heading2": "I’m a Front-End Developer and UI/UX Designer from Chile working and living in Milan, Italy.",
-  "home.summary": "I'm a creative and passionate professional who loves Web as much as Design. I started working with small business and participating in design contests to build a strong portfolio and references. With perseverance and hard work, in 2012 I was contacted to work remotely with a company in USA which produces logo and print design services. In 2013, I went to London, UK.",
+  "home.heading2": "Soy un Front-End Developer y Diseñador UI de Chile trabajando y viviendo en Milán, Italia.",
+  "home.summary": "Soy un profesional creativo, apasionado y amo la Web tanto como el Diseño.",
   "home.socialIntro": "Mira lo que estoy compartiendo en Redes Sociales",
+  "about.bio": "Comencé a trabajar para pequeñas empresas y participando en concursos de diseño para crear mi portafolio. Con perseverancia y mucho trabajo, en el año 2012 fui contactado para trabajar remotamente para una empresa de Estados Unidos, que realiza servicios de diseño de marcas y papelería. El 2013 viajé y viví en Londres, Reino Unido por 1 año para encontrar nuevas perspectivas e inspiración. Tuve el placer de trabajar con una empresa Inglesa de decoración y un estudio de diseño Sueco. En el 2014, con 3 años de experiencia, diseñé mi marca y sitio web para dedicarme 100% a lo que amo, el Desarrollo Web, el Diseño y la Ilustración. Actualmente estoy viviendo en Milán, Italia, trabajando como Desarrollador Front-End en una gran empresa, sigo aprendiendo y enfrentándome a nuevos desafíos para mejorar cada día más.",
   "menu.about": "Sobre Mí",
   "menu.work": "Trabajo",
   "menu.journal": "Bitácora",
