Add missing translations

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -10,10 +10,10 @@
   "about.quote1": "Santiago, Chile",
   "about.bio2": "In 2013, I went to London, UK to find new perspectives and inspiration, where I had the pleasure to work with a vintage lighting signs company and a Swedish design studio.",
   "about.quote2": "London, UK",
-  "about.bio3": "In January 2014, with more than 3 years of experience, I launched my new design brand, to fully pursue what I love, Web Development, Design and Illustration.",
+  "about.bio3": "In January 2014, with more than 3 years of experience, I launched my new design brand, to fully pursue what I love: Web Development, Design and Illustration.",
   "about.quote3": "Milan, Italy",
   "about.bio4": "Right now I'm living in Milano, Italy working as a Front-End Developer, I keep learning and facing new challenges to improve every day more and more.",
-  "about.quote4": "La",
+  "about.quote4": "Always learning!",
   "menu.about": "About",
   "menu.work": "Work",
   "menu.journal": "Journal",
