--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -4,8 +4,16 @@
   "home.heading2": "Soy un Front-End Developer y Diseñador UI de Chile trabajando y viviendo en Milán, Italia.",
   "home.summary": "Soy un profesional creativo, apasionado y amo la Web tanto como el Diseño.",
   "home.socialIntro": "Mira lo que estoy compartiendo en Redes Sociales",
-  "about.bio": "Comencé a trabajar para pequeñas empresas y participando en concursos de diseño para crear mi portafolio. Con perseverancia y mucho trabajo, en el año 2012 fui contactado para trabajar remotamente para una empresa de Estados Unidos, que realiza servicios de diseño de marcas y papelería. El 2013 viajé y viví en Londres, Reino Unido por 1 año para encontrar nuevas perspectivas e inspiración. Tuve el placer de trabajar con una empresa Inglesa de decoración y un estudio de diseño Sueco. En el 2014, con 3 años de experiencia, diseñé mi marca y sitio web para dedicarme 100% a lo que amo, el Desarrollo Web, el Diseño y la Ilustración. Actualmente estoy viviendo en Milán, Italia, trabajando como Desarrollador Front-End en una gran empresa, sigo aprendiendo y enfrentándome a nuevos desafíos para mejorar cada día más.",
-  "about.heading1": "Soy un Front-End Developer y Diseñador UI.",
+  "about.heading1": "Soy Giu Magnani",
+  "about.heading2": "Front-End Developer y Diseñador UI, trabajando y viviendo en Milán, Italia. Soy un profesional creativo, apasionado y amo la Web tanto como el Diseño.",
+  "about.bio1": "Comencé a trabajar para pequeñas empresas y participando en concursos de diseño para crear mi portafolio. Con perseverancia y mucho trabajo, en el año 2012 fui contactado para trabajar remotamente para una empresa de Estados Unidos, que realiza servicios de diseño de marcas y papelería.",
+  "about.quote1": "Santiago, Chile",
+  "about.bio2": "El 2013 viajé y viví en Londres, Reino Unido por 1 año para encontrar nuevas perspectivas e inspiración. Tuve el placer de trabajar con una empresa Inglesa de decoración y un estudio de diseño de Suecia.",
+  "about.quote2": "Londres, Reino Unido",
+  "about.bio3": "En el 2014, con 3 años de experiencia, diseñé mi marca y sitio web para dedicarme 100% a lo que amo: el Desarrollo Web, el Diseño y la Ilustración.",
+  "about.quote3": "Milán, Italia",
+  "about.bio4": "Actualmente estoy viviendo en Milán, Italia, trabajando como Desarrollador Front-End en una gran empresa, sigo aprendiendo y enfrentándome a nuevos desafíos para mejorar cada día más.",
+  "about.quote4": "Always learning!",
   "menu.about": "Sobre Mí",
   "menu.work": "Trabajo",
   "menu.journal": "Bitácora",
