Refactor. Add favicon. Add correct titles and descriptions (SEO).

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,4 +1,9 @@
 {
+  "title.home": "Home",
+  "title.about": "About",
+  "title.work": "Work",
+  "title.journal": "Journal",
+  "title.contact": "Contact",
   "home.title": "Home",
   "home.heading1": "Hi! I'm Giu Magnani.",
   "home.heading2": "I’m a Front-End Developer and UI/UX Designer from Chile working and living in Milan, Italy.",
